--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ body {
     .dropzone .hint{opacity:.8;color:var(--muted)}
 
     .workspace{position:absolute;inset:0;margin:16px;border-radius:16px;pointer-events:none}
-    .token{position:absolute;pointer-events:auto;transform:translate(-50%,-50%);}
+    .token{position:absolute;pointer-events:none;transform:translate(-50%,-50%);}
     .token .card{padding:8px 10px}
 
     .combos{border-top:1px solid #22283d;background:#0e1423;overflow:auto}
