修改錯誤圖標

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ const seedRecipes = {
   '海+樹':['珊瑚',['🪸']],
   '熔爐+雜金屬':['純金屬',['⚙️']],
   '石頭+雜金屬':['鐵礦',['🪨','⚙️']],
-  '磁鐵礦+雜金屬':['電',['🪨','🧲']],
+  '磁鐵礦+雜金屬':['電',['⚡️']],
   '鐵礦+石頭':['磁鐵礦',['🪨','🧲']],
   '水+泥':['泥漿',['🟤','💧']],
   '水+沙':['泥漿',['🟤','💧']],
