強化名稱生成器。

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ body {
 
     <aside class="left">
       <div class="search">
-        <input id="search" placeholder="搜尋基礎元素或已解鎖物品" />
+        <input id="search" placeholder="搜尋所有已解鎖的元素" />
         <span class="pill" id="statsPill">—</span>
       </div>
       <div id="catalog" class="catalog"></div>
@@ -225,7 +225,7 @@ body {
 
     <main class="main">
       <section class="board">
-        <div class="dropzone" id="dropzone"><div class="hint">把兩個卡片拖進來合成</div></div>
+        <div class="dropzone" id="dropzone"><div class="hint">把兩個元素拖入此處合成</div></div>
         <div class="workspace" id="workspace"></div>
       </section>
       <section class="combos">
@@ -315,9 +315,16 @@ const firstPool = [
 ];
 const seedRecipes = {
   '水+土':['泥',['🟤']],
+  '火細胞+植物':['熾火草',['🔥','🌱']],
+  '水細胞+植物':['濤流根',['💧','🌱']],
+  '風細胞+植物':['破風藤',['💨','🌱']],
+  '土細胞+植物':['地鳴樹',['🟫','🌲']],
+  '土+石頭':['大地',['🌍']],
+  '大地+大地':['大陸',['🌍']],
   '火+火':['烈焰',['🔥','🔥']],
-  '烈焰+火':['強烈焰',['🔥','🔥']],
+  '烈焰+火':['烈焰',['🔥','🔥']],
   '烈焰+烈焰':['熾焰',['🔥','🔥']],
+  '熾焰+火':['熾焰',['🔥','🔥']],
   '水+水':['河',['💧','🌊']],
   '火+水':['蒸氣',['💨']],
   '風+風':['颶風',['💨','💨']],
@@ -337,10 +344,11 @@ const seedRecipes = {
   '灰燼+土':['沃壤',['🟫','✨']],
   '沃壤+植物':['作物',['🌾']],
   '河+河':['湖',['💧','🏞️']],
+  '水+河':['河',['💧','🌊']],
   '湖+湖':['海',['🌊']],
   '泥+光':['細胞',['🦠']],
   '細胞+細胞':['生命',['🌱']],
-  '風+泥':['泥沙暴',['💨','🟤']],
+  '風+泥':['揚泥',['💨','🟤']],
   '細胞+水':['水細胞',['🦠','💧']],
   '細胞+土':['土細胞',['🦠','🟫']],
   '細胞+風':['風細胞',['🦠','💨']],
@@ -348,14 +356,21 @@ const seedRecipes = {
   '細胞+火':['火細胞',['🦠','🔥']],
   '火+土':['磚',['🧱']],
   '生命+光':['靈魂',['👻']],
+  '天空+靈魂':['天堂',['🌈','👻']],
   '靈魂+生命':['動物',['🐾']],
   '動物+智慧':['人類',['👨']],
   '靈魂+細胞':['智慧',['🧠']],
   '火+泥':['黏土',['🟤','🪨']],
   '牆+天空':['天花板',['🏠','⬜']],
   '天花板+牆':['房間',['🏠','🚪']],
+  '房間+房間':['房屋',['🏡']],
+  '人工智慧+房屋':['智能家居',['🤖','🏡']],
+  '智能家居+人類':['懶人',['🥴']],
   '火+黏土':['水泥',['🧱','🪨']],
   '土+土':['石頭',['🪨']],
+  '石頭+石頭':['巨石',['🪨']],
+  '巨石+河':['石頭',['🪨']],
+  '石頭+河':['鵝卵石',['🪨','⭕️']],
   '石頭+火':['雜金屬',['⚙️']],
   '風+火':['煙',['🌫️']],
   '風+水':['雲',['☁️']],
@@ -373,19 +388,25 @@ const seedRecipes = {
   '太陽+月球':['時間',['⌛️']],
   '生命+土':['植物',['🌿']],
   '植物+時間':['樹',['🌳']],
-  '電+水': ['電解水',['⚡','💧']],
+  '火+樹':['木炭',['🪵','🔥']],
+  '樹+樹':['森林',['🌲']],
+  '火+森林':['森林大火',['🌲']],
+  '電+水': ['電解水',['⚡️','💧']],
   '植物+雨':['花朵',['🌸']],
   '植物+水':['水生植物',['💧','🌿']],
   '雜金屬+電':['低階機器',['🤖']],
   '純金屬+電':['高階機器',['🤖']],
+  '高階機器+冰':['瞬凍機',['🏭','🧊','⚡️']],
+  '低階機器+冰':['製冰機',['🏭','🧊']],
   '水+時間':['冰',['🧊']],
   '水+冰':['雪',['❄️']],
   '火+雜金屬':['熔爐',['🔥','🏭']],
   '熔爐+磁鐵礦':['磁鐵',['🧲']],
   '生命+水':['魚',['🐟']],
-  '魚+電':['電鰻',['🐟','⚡']],
-  '土+時間':['化石',['🦴']],
-  '生命+純金屬':['賽博',['🧬','🤖']]
+  '魚+電':['電鰻',['🐟','⚡️']],
+  '動物+時間':['化石',['🦴']],
+  '生命+純金屬':['賽博',['🧬','🤖']],
+  '賽博+智慧':['人工智慧',['🤖','🧠']]
 };
 
 
@@ -394,7 +415,7 @@ const elementDisplay = {
   '龍之心': {
     showEmoji: false,
     showImage: true,
-    image: 'images/special/dragon_heart.png'
+    image: 'images/dragon_heart.png'
   },
 };
 
@@ -543,11 +564,14 @@ for (const [k, v] of Object.entries(seedRecipes)) {
 }
       const rules = [
     [/黑洞|宇宙|銀河|星系|行星|恆星|星|彗星/, ['🪐']],
-    [/水|泉|雨|滴/, ['💧']],
+    [/水|泉|滴/, ['💧']],
+    [/雨/, ['🌧️']],
     [/海|潮|浪|洋/, ['🌊']],
     [/河|湖/, ['🏞️']],             
     [/樹|林|木|森|松|柏/, ['🌲']],
-    [/花|瓣|櫻|梅|菊|蓮|蘭/, ['🌸']],
+    [/花|瓣|櫻|梅|蘭/, ['🌸']],
+    [/菊/, ['🌼']],
+    [/蓮/, ['🪷']],
     [/蟲|幼蟲/, ['🐛']],
     [/蝶/, ['🦋']],
     [/甲蟲|鍬形蟲|金龜子/, ['🪲']],
@@ -577,14 +601,21 @@ for (const [k, v] of Object.entries(seedRecipes)) {
     [/橙|橘|柑/, ['🍊']],
     [/莓/, ['🍓']],
     [/風|颶|飄|氣|霧|煙/, ['💨']],
-    [/土|地|砂|石|山|岩|礦|磚|泥|塵/, ['🪨']],
+    [/砂|石|山|岩|礦/, ['🪨']],
+    [/磚/, ['🧱']],
+    [/泥/, ['🟤']],
+    [/土/, ['🟫']],
     [/金屬|金|鋼|鐵|銅|銀|機|齒|械|裝甲|裝備/, ['⚙️']],
     [/馬|駒/, ['🐎']],
     [/牛|犢/, ['🐂']],
     [/羊|羔/, ['🐑']],
     [/豬|豚/, ['🐖']],
-    [/犬|狗|獵犬|狼/, ['🐺']],
-    [/貓|獅|虎|豹/, ['🐈']],
+    [/狼/, ['🐺']],
+    [/犬|狗/, ['🐶']],
+    [/獅/, ['🦁']],
+    [/虎/, ['🐅']],
+    [/豹/, ['🐆']],
+    [/貓/, ['🐱']],
     [/熊/, ['🐻']],
     [/猴|猿/, ['🐒']],
     [/蝙蝠/, ['🦇']],
@@ -602,7 +633,7 @@ for (const [k, v] of Object.entries(seedRecipes)) {
     [/魷/, ['🦑']],
     [/蝦/, ['🦐']],
     [/蟹/, ['🦀']],
-    [/海星/, ['⭐']],
+    [/星/, ['⭐️']],
     [/巫|法師/, ['🧙🏻']],
     [/靈|魂|魄/, ['👻']],
     [/魔|咒|幻|術|法|符/, ['🪄']],
@@ -617,7 +648,7 @@ for (const [k, v] of Object.entries(seedRecipes)) {
     [/手槍|步槍|狙擊槍|獵槍|霰彈槍|槍械/, ['🔫']],
     [/砲|炮|火砲|大砲|加農炮|迫擊砲/, ['💣']],
     [/鎬|稿|鎬子|十字鎬|挖礦/, ['⛏️']],
-    [/鏟|鐵鍬|鐵鏟|鏟子|鍬/, ['🧹']], // 沒鏟子emoji暫用掃把
+    [/鏟|鐵鍬|鐵鏟|鏟子|鍬/, ['🧹']], 
     [/鋸|鋸子/, ['🪚']],
     [/扳手|板手|套筒/, ['🔧']],
     [/螺絲起子|起子|螺起/, ['🪛']],
@@ -649,12 +680,14 @@ function randomFrom(arr) {
 function generateName(a,b){
   // semantic-ish naming
   const classify = n => {
-    if(/火|焰|熔|熱/.test(n)) return 'fire';
-    if(/水|海|河|冰|雲|雨|霜/.test(n)) return 'water';
-    if(/風|氣|雲|霧|煙/.test(n)) return 'wind';
-    if(/土|石|山|岩|礦|磚|泥/.test(n)) return 'earth';
-    if(/龍|獸|鳥|魚|蟲/.test(n)) return 'creature';
-    if(/金|鋼|鐵|機|齒|械/.test(n)) return 'tech';
+    if(/火|焰|熔|熱|炎|燄|烈|灼|燒|炙|爆|燃/.test(n)) return 'fire';
+    if(/水|海|河|雨|露|泉|潮|浪|洋|湖|濕/.test(n)) return 'water';
+    if(/風|氣|雲|霧|煙|颶|飄|旋|嵐|吹/.test(n)) return 'wind';
+    if(/土|石|山|岩|礦|磚|泥|塵|沙|峰|崖|谷/.test(n)) return 'earth';
+    if(/龍|獸|鳥|魚|蟲|虎|獅|鷹|蛇|熊|狼|鳳|貓|狗|兔|馬|牛|羊|豬|雞|鴨|蛙|龜/.test(n)) return 'creature';
+    if(/金|鋼|鐵|機|齒|械|電|磁|核|量子|賽博|AI|晶片|電腦|機器/.test(n)) return 'tech';
+    if(/魔|法|咒|符|靈|魂|幻|術|陣|祕|奧|神秘|巫|妖|鬼|神/.test(n)) return 'magic';
+    if(/樹|花|草|木|森|林|葉|根|藤|苔|竹|菊|梅|蓮/.test(n)) return 'plant';
     return 'other';
   };
   const ca = classify(a), cb = classify(b);
@@ -663,7 +696,13 @@ function generateName(a,b){
     const prefix = ca==='creature' ? '雙' : '雙';
     name = prefix + a;
   } else if((ca==='tech' && cb==='creature') || (cb==='tech' && ca==='creature')){
-    name = '賽博' + (ca==='creature'? a : b);
+    name = ['賽博', '改造' + (ca==='creature'? a : b)];
+  } else if((ca==='magic' && cb==='creature') || (cb==='tech' && ca==='creature')){
+    name = ['魔化' + (ca==='creature'? a : b)];
+  } else if((ca==='magic' && cb==='tech') || (cb==='magic' && ca==='tech')){
+    name = ['奧術', '魔導'];
+  
+
   } else {
     const templates = [
       `${a}${b}`, `${a}之${b}`, `${b}-${a}`, `${a} ${b}`, `${a}${b}體`, `${a}·${b}`
@@ -784,11 +823,6 @@ function add3DTiltEffect(cardElement) {
     `;
   });
 }
-
-
-  
-
-
     function toast(msg){
       const t = document.getElementById('toast');
       t.textContent = msg; t.classList.add('show');
@@ -1109,12 +1143,12 @@ if (intro && textEl) {
 const board = document.querySelector('.board');
 
 board.addEventListener('dragover', e => {
-  if (dropzone.contains(e.target)) return;   // 讓原本 dropzone 自行處理
+  if (dropzone.contains(e.target)) return;   
   e.preventDefault();
 }, { capture: true });
 
 board.addEventListener('drop', e => {
-  if (dropzone.contains(e.target)) return;   // 關鍵：避免觸發兩次
+  if (dropzone.contains(e.target)) return;   
   e.preventDefault();
   dropzone.style.borderColor = '#2a3250';
 
@@ -1308,7 +1342,6 @@ document.getElementById('rerollMissions').addEventListener('click', ()=>{
     })();
     function renderAll(){
       renderCatalog(); renderBook(); renderHistory(); renderMissions();
-      document.getElementById('ver').textContent = SAVE_VERSION;
     }
     try{ renderAll(); } catch(e){ console.error('render error', e); toast('初始化失敗'); }
 
